Purchases: fix alignment on site-level purchases screen (#48217)

--- a/client/me/purchases/style.scss
+++ b/client/me/purchases/style.scss
@@ -30,6 +30,10 @@
 
 	.subscriptions__list & {
 		margin: 16px 16px 0 0;
+
+		@include breakpoint-deprecated( '>960px' ) {
+			margin: 0 16px 0 0;
+		}
 	}
 
 	@include breakpoint-deprecated( '>960px' ) {
